feat: add masking, test and cleanup code
